--- a/pom.xml
+++ b/pom.xml
@@ -360,15 +360,20 @@
 					</executions>
 			</plugin>
 
- <plugin>
+<plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.9</version>
+          <version>3.0.0-M1</version>
          <configuration>
-        <classesDirectory>${project.build.directory}\test-classes</classesDirectory>
-          <skipTests>false</skipTests>
+         <includes>
+        <include>**/*.java</include>
+        </includes>
+          <testFailureIgnore>true</testFailureIgnore>
+         <!-- <classesDirectory>${project.build.directory}\test-classes</classesDirectory>
+          <skipTests>false</skipTests> -->
     </configuration> 
   </plugin>
+  
   
   
   
